@@ -288,7 +288,7 @@ function getItemActions($i, $withIcons = false, $popupsOnly = false, $caption = 
 	if($isPhoto) {
 		$photo = $gallery->album->getPhoto($i);
 		if ($gallery->album->fields["use_exif"] == 'yes' &&
-			(eregi("jpe?g\$", $photo->image->type)) &&
+			(preg_match('/jpe?g\$/i', $photo->image->type)) &&
 			(isset($gallery->app->use_exif) || isset($gallery->app->exiftags)))
 		{
 			$options['showExif'] = array(
@@ -298,7 +298,6 @@ function getItemActions($i, $withIcons = false, $popupsOnly = false, $caption = 
 				'separate' => true
 			);
 		}
-
 
 		if(isset($gallery->album->fields["ecards"]) &&
 		   $gallery->album->fields["ecards"] == 'yes' &&
